--- a/PhotoAlbum/app/src/main/res/layout/rv_photo_item.xml
+++ b/PhotoAlbum/app/src/main/res/layout/rv_photo_item.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    android:elevation="20dp"
+    app:cardCornerRadius="5dp">
 
-    <TextView
-        android:id="@+id/tv_test"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Test"
-        android:visibility="visible"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textAllCaps="false"
-        android:textSize="50sp"/>
-</LinearLayout>
+   <ImageView
+       android:id="@+id/iv_item_photo"
+       android:layout_width="match_parent"
+       android:layout_height="300dp"
+       android:scaleType="centerCrop"/>
+</androidx.cardview.widget.CardView>
