--- a/PhotoAlbum/app/src/main/res/layout/activity_main.xml
+++ b/PhotoAlbum/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/tb_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="#F7F7F7"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:popupTheme="@style/Theme.AppCompat.Light"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
